fixed footer moving around too much

--- a/src/styles/components/content.scss
+++ b/src/styles/components/content.scss
@@ -3,14 +3,13 @@ $content-background: hsla(0, 10%, 25%, 0.4);
 
 #container {
   background: $container-background;
-	padding: 20px 35px !important;
+  // padding: 10px 15px;
 }
 
 #content {
   background-color: $content-background;
-  border: 1px solid black;
-	margin-bottom: 100px;
-	padding: 10px 70px;
-  min-height: 900px;
+  border: 2px solid gray;
+  padding: 10px 70px;
+  min-height: 1200px;
   text-align: left;
 }
