--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -2,7 +2,7 @@ $footer-background: hsla(0, 19%, 22%, 0.603);
 
 footer {
 	background: $footer-background;
-	height: 100px;
+	margin: 50px 0 0 0;
 	position: absolute;
 	left: 0;
 	bottom: 0;
